--- a/private/src/view/templates/encup/pages/exceptional-inscription.html
+++ b/private/src/view/templates/encup/pages/exceptional-inscription.html
@@ -357,7 +357,7 @@
     </div>
     <div class="card-footer">
       <div class="w-100 text-center">
-        <button class="btn btn-primary-bc" id="btn-page-back"><b>
+        <button class="btn btn-primary-bc" id="btn-page-back-ex"><b>
           <span class="material-symbols-outlined">arrow_back</span>
           Voltar para o site do ENCUP</b>
         </button>
