corrigida programação das oficinas

--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -320,7 +320,7 @@
                 Gestores
               </div>
               <div class="col">
-                Linhas tênues entre estudantes
+                Limites da relação entre estudante-voluntários e acolhimento de demandas dos estudantes
               </div>
               <div class="col-workshop-name">
                 <a id="btn-aline" tabindex="0" data-bs-trigger="focus" type="button" class="btn" data-bs-toggle="popover" data-bs-custom-class="encup-popover" data-bs-placement="left">Aline Akimoto <span class="material-symbols-outlined">info</span></a>
