Adicionado detalhes sobre a mesa 2

--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -359,63 +359,116 @@
             </div>
           </div>
         </div>
-        <div class="card d-none" id="description">
+        <div class="card d-none" id="table-1">
           <div class="card-header">
-            <h5 class="text-center fw-bold mb-0">
-              MESA X: TÍTULO DA ATIVIDADE
-            </h5>
+            <h4 class="text-center fw-bold mb-0">
+              DETALHES DA MESA 1
+            </h4>
           </div>
           <div class="card-body">
             <div class="row">
-              <div class="col-4">
-                <h4>Objetivo geral</h4>
-                <p>
+              (em breve)
+            </div>
+          </div>
+        </div>
+        <div class="card d-none" id="table-2">
+          <div class="card-header bg-encup-primary text-white">
+            <h3 class="text-center fw-bold mb-0">
+              DETALHES DA MESA 2
+            </h3>
+          </div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-12 col-lg-4">
+                <h4 class="mb-3">O papel das universidades no fortalecimento dos cursinhos populares</h4>
+                <h5 class="mb-1">Objetivo geral</h5>
+                <p class="mb-0">
                   Apresentar um panorama dos cursinhos populares no Brasil e o papel desempenhado pelas universidades para fortalecê-los. Isso abrange áreas como pesquisa, projetos de extensão, concessão de espaços e outras ações. Vamos abordar como podemos aprofundar e ampliar essas colaborações.
                 </p>
               </div>
-              <div class="col">
-                <h4>Convidados</h4>
-                <div class="card bg-info-subtle">
-                  <div class="card-body">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-theme="dark">
-                      <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                      </div>
-                      <div class="carousel-inner">
-                        <div class="carousel-item active">
-                          <div class="row">
-                            <div class="col-4">
-                              <img src="/assets/img/logos/bc-colorido.png" class="w-100" alt="">
-                            </div>
-                            <div class="col">
-                              <h5>José Arnaldo Frutuoso Roveda</h5>
-                              <p>
-                                Desde 2003 atua como professor assistente doutor da UNESP - Universidade Estadual Paulista Júlio de Mesquita Filho, no Instituto de Ciência e Tecnologia, campus de Sorocaba. Foi Coordenador do Curso de Engenharia Ambiental no período de 2014 a 2016. Coordenou o Cursinho Gerabixo da Unesp Sorocaba de 2006 a 2019 e agora atua na Supervisão Geral dos Cursinhos da UNESP.
-                              </p>
-                            </div>
+              <div class="col-12 col-lg-8">
+                <h4 class="mt-4 mt-lg-0 mb-2">Conheça os convidados:</h4>
+                <div id="carousel-table-2-guests" class="carousel slide" data-bs-theme="dark">
+                  <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carousel-table-2-guests" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carousel-table-2-guests" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carousel-table-2-guests" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  </div>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <div class="row row-carousel align-items-center">
+                        <div class="col-12 col-lg-3">
+                          <div class="card overflow-hidden mx-5 mx-lg-0">
+                            <img src="/assets/img/convidados/eliane-min.png" alt="Eliane" class="w-100">
                           </div>
+                          <p>&nbsp;</p>
                         </div>
-                        <div class="carousel-item">
-                          TESTE 2
-                        </div>
-                        <div class="carousel-item">
-                          TESTE 3
+                        <div class="col-12 col-lg-9">
+                          <h5 class="mb-0">Eliane de Souza Cruz</h5>
+                          <p class="mb-0">
+                            Professora Adjunta na Universidade Federal de São Paulo (Unifesp) e doutora em educação pela USP. Professora e gestora do cursinho popular Articula vestibular - pé na prática da educação básica. Vice-coordenadora do NUPU (Núcleo de Cursinhos Populares da UNIFESP). Idealizadora da Rede Articul@ções, constituída do poder público, instituições, entidades, movimentos sociais e sociedade civil que se ligam em rede na extensão, ensino, gestão e pesquisa. A missão é aproximar as universidades, poder públicos, escolas e sociedade.
+                          </p>
+                          <p>&nbsp;</p>
                         </div>
                       </div>
-                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                      </button>
-                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                      </button>
+                    </div>
+                    <div class="carousel-item">
+                      <div class="row row-carousel align-items-center">
+                        <div class="col-12 col-lg-3">
+                          <div class="card overflow-hidden mx-5 mx-lg-0">
+                            <img src="/assets/img/convidados/luiz-min.png" alt="Luiz Filipe" class="w-100">
+                          </div>
+                          <p>&nbsp;</p>
+                        </div>
+                        <div class="col-12 col-lg-9">
+                          <h5 class="mb-0">Luiz Filipe Goldfeder Reinecke</h5>
+                          <p class="mb-0">
+                            É professor adjunto de administração pública da Universidade do Estado de Santa Catarina (UDESC/CESFI). Lidera o Centro de Investigação em Governo Aberto e Transparência (CIGAT) e exerce a direção de extensão, cultura e comunidade da UDESC Balneário Camboriú (UDESC/CESFI). Possui graduação em administração pública, mestrado e doutorado em administração pelo Centro de Ciências da Administração e Socioeconômicas (ESAG) da Universidade do Estado de Santa Catarina (UDESC).
+                          </p>
+                          <p>&nbsp;</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <div class="row row-carousel align-items-center">
+                        <div class="col-12 col-lg-3">
+                          <div class="card overflow-hidden mx-5 mx-lg-0">
+                            <img src="/assets/img/convidados/jose-min.png" alt="José Arnaldo" class="w-100">
+                          </div>
+                          <p>&nbsp;</p>
+                        </div>
+                        <div class="col-12 col-lg-9">
+                          <h5 class="mb-0">José Arnaldo Frutuoso Roveda</h5>
+                          <p class="mb-0">
+                            Desde 2003 atua como professor assistente doutor da UNESP - Universidade Estadual Paulista Júlio de Mesquita Filho, no Instituto de Ciência e Tecnologia, campus de Sorocaba. Foi Coordenador do Curso de Engenharia Ambiental no período de 2014 a 2016. Coordenou o Cursinho Gerabixo da Unesp Sorocaba de 2006 a 2019 e agora atua na Supervisão Geral dos Cursinhos da UNESP.
+                          </p>
+                          <p>&nbsp;</p>
+                        </div>
+                      </div>
                     </div>
                   </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carousel-table-2-guests" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carousel-table-2-guests" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+        <div class="card d-none" id="table-3">
+          <div class="card-header">
+            <h4 class="text-center fw-bold mb-0">
+              DETALHES DA MESA 3
+            </h4>
+          </div>
+          <div class="card-body">
+            <div class="row">
+              (em breve)
             </div>
           </div>
         </div>
