Adiconado mais itens da programação e inscrição ans oficinas

--- a/scss/theme/_main-theme.scss
+++ b/scss/theme/_main-theme.scss
@@ -7,15 +7,15 @@
 }
 
 .bg-encup-primary {
-  background-color: rgb(0, 129, 176);
+  background-color: $encup-primary-color;
 }
 
 .bg-encup-secondary {
-  background-color: rgb(255, 164, 74);
+  background-color: $encup-secondary-color;
 }
 
 .bg-encup-tertiary {
-  background-color: rgb(152, 245, 183);
+  background-color: $encup-tertiary-color;
 }
 
 
