--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -5,3 +5,7 @@ $link-color: rgb(15, 144, 144);
 $link-hover-color: rgb(3, 101, 101);
 $shadow-color: rgb(0, 87, 119, 0.25);
 $border-color: rgb(80, 154, 181);
+$encup-primary-color: rgb(0, 129, 176);
+$encup-secondary-color: rgb(255, 164, 74);
+$encup-tertiary-color: rgb(152, 245, 183);
+  
