incluida confraternização na programação

--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -269,6 +269,14 @@
                     Encerramento 1º dia
                   </div>
                 </div>
+                <div class="row justify-content-center align-items-center mx-0 py-2 mt-2">
+                  <div class="col-auto fw-semibold">
+                            19h00        
+                  </div>
+                  <div class="col">
+                    Confraternização
+                  </div>
+                </div>
               </div>
             </div>
           </div>
