Ajustes na programação

--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -142,7 +142,8 @@
                   Como captar e manter parcerias para o seu cursinho
                 </div>
                 <div class="col-workshop-name">
-                  <a id="btn-arco2" tabindex="0" data-bs-trigger="focus" type="button" class="btn" data-bs-toggle="popover" data-bs-custom-class="encup-popover" data-bs-placement="left">Arco Instituto <span class="material-symbols-outlined">info</span></a>
+                  <a id="btn-priscila2" tabindex="0" data-bs-trigger="focus" type="button" class="btn" data-bs-toggle="popover" data-bs-custom-class="encup-popover" data-bs-placement="left">Priscila Baia <span class="material-symbols-outlined">info</span></a><br>
+                  <a id="btn-igor2" tabindex="0" data-bs-trigger="focus" type="button" class="btn" data-bs-toggle="popover" data-bs-custom-class="encup-popover" data-bs-placement="left">Igor Moura <span class="material-symbols-outlined">info</span></a>
                 </div>
                 <div class="col-workshop">
                   <a href="https://forms.gle/eRHeRQGfVdFr1Pev5" target="_blank" class="btn btn-tertiary-bc"><span class="material-symbols-outlined">edit_note</span></a>
@@ -179,7 +180,7 @@
                 <h4 class="card-title text-center mb-0">SÁBADO — 26/08</h4>
               </div>
               <div class="card-body">
-                <div class="row justify-content-center align-items-center mx-0 bg-encup-tertiary py-2 my-2">
+                <div class="row justify-content-center align-items-center mx-0 bg-encup-tertiary py-2 mb-2">
                   <div class="col-auto fw-semibold">
                     08h30 às 09h15
                   </div>
@@ -230,7 +231,15 @@
                     Diagnóstico e reflexões iniciais sobre a Rede de Cursinhos
                   </div>
                 </div>
-                <hr class="my-2 border-2">
+                <div class="row justify-content-center align-items-center bg-encup-online mx-0 py-2 my-2">
+                  <div class="col-auto fw-semibold">
+                    14h30 às 15h30<br>
+                    (Apenas online)
+                  </div>
+                  <div class="col">
+                    A Importância dos Cursinhos Populares para a Sociedade e sua Relação com as Universidades
+                  </div>
+                </div>
                 <div class="row justify-content-center align-items-center mx-0">
                   <div class="col-auto fw-semibold">
                     15h00 às 16h25
@@ -286,7 +295,7 @@
                 <h4 class="card-title text-center mb-0">DOMINGO — 27/08</h4>
               </div>
               <div class="card-body">
-                <div class="row justify-content-center align-items-center mx-0 bg-encup-tertiary py-2 my-2">
+                <div class="row justify-content-center align-items-center mx-0 bg-encup-tertiary py-2 mb-2">
                   <div class="col-auto fw-semibold">
                     08h30 às 09h15
                   </div>
@@ -452,7 +461,8 @@
                 Como captar e manter parcerias para o seu cursinho
               </div>
               <div class="col-workshop-name">
-                <a id="btn-arco" tabindex="0" data-bs-trigger="focus" type="button" class="btn" data-bs-toggle="popover" data-bs-custom-class="encup-popover" data-bs-placement="left">Arco Instituto <span class="material-symbols-outlined">info</span></a>
+                <a id="btn-priscila" tabindex="0" data-bs-trigger="focus" type="button" class="btn" data-bs-toggle="popover" data-bs-custom-class="encup-popover" data-bs-placement="left">Priscila Baia <span class="material-symbols-outlined">info</span></a><br>
+                <a id="btn-igor" tabindex="0" data-bs-trigger="focus" type="button" class="btn" data-bs-toggle="popover" data-bs-custom-class="encup-popover" data-bs-placement="left">Igor Moura <span class="material-symbols-outlined">info</span></a>
               </div>
               <div class="col-workshop">
                 <a href="https://forms.gle/eRHeRQGfVdFr1Pev5" target="_blank" class="btn btn-tertiary-bc"><span class="material-symbols-outlined">edit_note</span></a>
@@ -510,9 +520,9 @@
                           <p>&nbsp;</p>
                         </div>
                         <div class="col-12 col-lg-9">
-                          <h5 class="mb-0">Vinicius Machado</h5>
+                          <h5 class="mb-0">Vini Machado</h5>
                           <p class="mb-0">
-                            
+                            Coordenador-Geral de Promoção de Direitos da População Negra, na Secretaria de Acesso à Justiça no Ministério da Justiça. Militante e ativista na educação popular, tendo atuado no Vestibular Cidadão e na Brasil Cursinhos.
                           </p>
                           <p>&nbsp;</p>
                         </div>
@@ -529,7 +539,7 @@
                         <div class="col-12 col-lg-9">
                           <h5 class="mb-0">Luciana Xavier Ferreira</h5>
                           <p class="mb-0">
-                            
+                            Mestranda em Educação e Ciências Sociais: Desigualdades e Diferenças pela Faculdade de Educação da USP, Pedagoga, Especialista em Educação Inclusiva com ênfase na Deficiência Intelectual formada pela PUC-SP, Psicopedagogia Clínica e Institucional pelo Centro Universitário Assunção (UNIFAI). Trabalha na área educacional há 22 anos atuando em instituições privadas e públicas como professora. Operou na implementação do Projeto Inclusão da APAE-SP, como educadora responsável, formadora e presente na escola experimental inclusiva. Atualmente Integra a equipe de Assistente Técnica de Educação, da Divisão de Educação Especial pela Secretaria Municipal de Educação de São Paulo. É também uma das autoras do livro “Quando a Educação Especial de Qualidade Acontece”. 
                           </p>
                           <p>&nbsp;</p>
                         </div>
