--- a/scss/theme/_main-theme.scss
+++ b/scss/theme/_main-theme.scss
@@ -10,6 +10,10 @@
   background-color: $encup-primary-color;
 }
 
+.bg-encup-online {
+  background-color: rgb(107, 207, 244);
+}
+
 .bg-encup-secondary {
   background-color: $encup-secondary-color;
 }
