--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -166,7 +166,7 @@
 </div>
 <!-- Modal -->
 <div class="modal fade" id="modal-event-schedule" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modal-event-schedule-label" aria-hidden="true">
-  <div class="modal-dialog modal-xl modal-dialog-centered">
+  <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header bg-primary-bc text-white">
         <h1 class="modal-title fs-3 fw-bold" id="modal-event-schedule-label">PROGRAMAÇÃO ENCUP 2023</h1>
@@ -181,7 +181,7 @@
               </div>
               <div class="card-body">
                 <div class="row justify-content-center align-items-center mx-0 bg-encup-tertiary py-2 mb-2">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold">
                     08h30 às 09h15
                   </div>
                   <div class="col">
@@ -189,7 +189,7 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold">
                     09h15 às 10h00
                   </div>
                   <div class="col">
@@ -197,7 +197,7 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0 bg-encup-secondary py-2 my-2">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold">
                     10h00 às 10h30
                   </div>
                   <div class="col">
@@ -205,8 +205,9 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0">
-                  <div class="col-auto fw-semibold">
-                    10h30 às 12h00
+                  <div class="col-auto fw-bold text-center">
+                    10h30 às 12h00<br>
+                    <a href="https://youtube.com/live/8R2waQiexpU?feature=share" target="_blank" class="text-decoration-none text-body"><span class="fw-medium">ao vivo</span> <i class="bi fs-5 bi-youtube"></i></a>
                   </div>
                   <div class="col">
                     Mesa 1: Importância da valorização das diferenças nos Currículos Pedagógicos
@@ -216,7 +217,7 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0 bg-encup-tertiary py-2 my-2">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold">
                     12h00 às 13h45
                   </div>
                   <div class="col">
@@ -224,7 +225,7 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold">
                     13h50 às 14h50
                   </div>
                   <div class="col">
@@ -232,16 +233,19 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center bg-encup-online mx-0 py-2 my-2">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold text-center">
                     14h30 às 15h30<br>
-                    (Apenas online)
+                    <a href="https://youtube.com/live/O8DcmRRxh5w?feature=share" target="_blank" class="text-decoration-none text-body"><span class="fw-medium">apenas no</span> <i class="bi fs-5 bi-youtube"></i></a>
                   </div>
                   <div class="col">
-                    A Importância dos Cursinhos Populares para a Sociedade e sua Relação com as Universidades
+                    Palestra online: A Importância dos Cursinhos Populares para a Sociedade e sua Relação com as Universidades
+                  </div>
+                  <div class="col-auto ps-0">
+                    <button class="btn btn-tertiary-bc" id="btn-lecture-info"><span class="material-symbols-outlined">info</span></button>
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold">
                     15h00 às 16h25
                   </div>
                   <div class="col">
@@ -252,7 +256,7 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0  bg-encup-tertiary py-2 my-2">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold">
                     16h30 às 17h00
                   </div>
                   <div class="col">
@@ -260,8 +264,9 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0">
-                  <div class="col-auto fw-semibold">
-                    17h05 às 18h35
+                  <div class="col-auto fw-bold text-center">
+                    17h05 às 18h35<br>
+                    <a href="https://youtube.com/live/SvR3X4_AN2o?feature=share" target="_blank" class="text-decoration-none text-body"><span class="fw-medium">ao vivo</span> <i class="bi fs-5 bi-youtube"></i></a>
                   </div>
                   <div class="col">
                     Mesa 2: O papel das universidades no fortalecimento dos cursinhos populares
@@ -271,7 +276,7 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0 bg-encup-secondary py-2 mt-2">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold">
                     18h35 às 18h45
                   </div>
                   <div class="col">
@@ -279,7 +284,7 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0 py-2 mt-2">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold">
                             19h00        
                   </div>
                   <div class="col">
@@ -296,7 +301,7 @@
               </div>
               <div class="card-body">
                 <div class="row justify-content-center align-items-center mx-0 bg-encup-tertiary py-2 mb-2">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold">
                     08h30 às 09h15
                   </div>
                   <div class="col">
@@ -304,7 +309,7 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold">
                     09h30 às 10h00
                   </div>
                   <div class="col">
@@ -312,7 +317,7 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0 bg-encup-secondary py-2 my-2">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold">
                     10h00 às 10h15
                   </div>
                   <div class="col">
@@ -320,8 +325,9 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0">
-                  <div class="col-auto fw-semibold">
-                    10h15 às 11h45
+                  <div class="col-auto fw-bold text-center">
+                    10h15 às 11h45<br>
+                    <a href="https://youtube.com/live/1P1WM93Paxc?feature=share" target="_blank" class="text-decoration-none text-body"><span class="fw-medium">ao vivo</span> <i class="bi fs-5 bi-youtube"></i></a>
                   </div>
                   <div class="col pe-1">
                     Mesa 3: Desdobramentos da Reforma do Ensino Médio: aspectos psicopedagógicos e a atuação dos cursinhos populares
@@ -331,7 +337,7 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0 bg-encup-tertiary py-2 my-2">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold">
                     11h45 às 13h30
                   </div>
                   <div class="col">
@@ -339,7 +345,7 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold">
                     13h35 às 15h00
                   </div>
                   <div class="col">
@@ -348,15 +354,19 @@
                 </div>
                 <hr class="my-2 border-2">
                 <div class="row justify-content-center align-items-center mx-0">
-                  <div class="col-auto fw-semibold">
-                    15h05 às 16h35
+                  <div class="col-auto fw-bold text-center">
+                    15h05 às 16h35<br>
+                    <a href="https://youtube.com/live/U9sLPVRchOI?feature=share" target="_blank" class="text-decoration-none text-body"><span class="fw-medium">ao vivo</span> <i class="bi fs-5 bi-youtube"></i></a>
                   </div>
                   <div class="col">
                     Planejamento estratégico em rede e apresentações temáticas
                   </div>
+                  <div class="col-auto ps-0">
+                    <a href="https://youtube.com/live/U9sLPVRchOI?feature=share" target="_blank" class="btn btn-tertiary-bc py-1"><i class="bi fs-4 bi-youtube"></i></a>
+                  </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0 bg-encup-secondary py-2 mt-2">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold">
                     16h40 às 16h50
                   </div>
                   <div class="col">
@@ -365,7 +375,7 @@
                 </div>
                 <hr class="my-0 border-2 opacity-100">
                 <div class="row justify-content-center align-items-center mx-0 bg-encup-secondary py-2">
-                  <div class="col-auto fw-semibold">
+                  <div class="col-auto fw-bold">
                     16h50 às 17h30
                   </div>
                   <div class="col">
@@ -470,11 +480,68 @@
             </div>
           </div>
         </div>
+        <div class="card d-none" id="lecture">
+          <div class="card-header bg-encup-primary text-white d-inline-flex justify-content-between">
+            <p class="d-inline-block mb-0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+            <h3 class="text-center fw-bold mb-0  d-inline-block">
+              DETALHES DA PALESTRA ONLINE
+            </h3>
+            <a href="https://youtube.com/live/O8DcmRRxh5w?feature=share" target="_blank" class="text-white fs-5 text-decoration-none">Assistir <i class="bi fs-4 bi-youtube"></i></a>
+          </div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-12 col-lg-4">
+                <h4 class="mb-3">A importância dos cursinhos populares para a sociedade e sua relação com as universidades</h4>
+                <h5 class="mb-1">Objetivo geral</h5>
+                <p class="mb-0">
+                  Apresentar um panorama dos cursinhos populares no Brasil, sua relavância para o contexto social e como as universidades podem fomentar essas iniciativas.
+                </p>
+              </div>
+              <div class="col-12 col-lg-8">
+                <h4 class="mt-4 mt-lg-0 mb-2">Conheça o convidado:</h4>
+                <div id="carousel-table-1-guests" class="carousel slide" data-bs-theme="dark">
+                  <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carousel-table-1-guests" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  </div>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <div class="row row-carousel align-items-center">
+                        <div class="col-12 col-lg-3">
+                          <div class="card overflow-hidden mx-5 mx-lg-0">
+                            <img src="/assets/img/convidados/cloves-min.png" alt="Marineusa" class="w-100">
+                          </div>
+                          <p>&nbsp;</p>
+                        </div>
+                        <div class="col-12 col-lg-9">
+                          <h5 class="mb-0">Cloves Alexandre de Castro</h5>
+                          <p class="mb-0">
+                            Pós-Doutorado em Geografia pela Universidade de São Paulo (USP). Licenciado e Bacharel em Geografia pela Universidade Estadual Paulista Júlio de Mesquita Filho (FCT- UNESP). Foi professor de Pré-Vestibular Popular na cidade de Presidente Prudente-SP, de 1999-2004. Pesquisador e ativista dos Cursinhos Pré-Vestibular Alternativos e Populares. Autor do livro "Cursinhos alternativos e populares: geografia das lutas".
+                          </p>
+                          <p>&nbsp;</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carousel-table-1-guests" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carousel-table-1-guests" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="card d-none" id="table-1">
-          <div class="card-header bg-encup-primary text-white">
-            <h4 class="text-center fw-bold mb-0">
+          <div class="card-header bg-encup-primary text-white d-inline-flex justify-content-between">
+            <p class="d-inline-block mb-0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+            <h3 class="text-center fw-bold mb-0  d-inline-block">
               DETALHES DA MESA 1
-            </h4>
+            </h3>
+            <a href="https://youtube.com/live/8R2waQiexpU?feature=share" target="_blank" class="text-white fs-5 text-decoration-none">Assistir <i class="bi fs-4 bi-youtube"></i></a>
           </div>
           <div class="card-body">
             <div class="row">
@@ -560,10 +627,12 @@
           </div>
         </div>
         <div class="card d-none" id="table-2">
-          <div class="card-header bg-encup-primary text-white">
-            <h3 class="text-center fw-bold mb-0">
+          <div class="card-header bg-encup-primary text-white d-inline-flex justify-content-between">
+            <p class="d-inline-block mb-0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+            <h3 class="text-center fw-bold mb-0  d-inline-block">
               DETALHES DA MESA 2
             </h3>
+            <a href="https://youtube.com/live/SvR3X4_AN2o?feature=share" target="_blank" class="text-white fs-5 text-decoration-none">Assistir <i class="bi fs-4 bi-youtube"></i></a>
           </div>
           <div class="card-body">
             <div class="row">
@@ -649,10 +718,12 @@
           </div>
         </div>
         <div class="card d-none" id="table-3">
-          <div class="card-header bg-encup-primary text-white">
-            <h4 class="text-center fw-bold mb-0">
+          <div class="card-header bg-encup-primary text-white d-inline-flex justify-content-between">
+            <p class="d-inline-block mb-0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+            <h3 class="text-center fw-bold mb-0  d-inline-block">
               DETALHES DA MESA 3
-            </h4>
+            </h3>
+            <a href="https://youtube.com/live/1P1WM93Paxc?feature=share" target="_blank" class="text-white fs-5 text-decoration-none">Assistir <i class="bi fs-4 bi-youtube"></i></a>
           </div>
           <div class="card-body">
             <div class="row">
