--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -499,9 +499,9 @@
               </div>
               <div class="col-12 col-lg-8">
                 <h4 class="mt-4 mt-lg-0 mb-2">Conheça o convidado:</h4>
-                <div id="carousel-table-1-guests" class="carousel slide" data-bs-theme="dark">
+                <div id="carousel-lecture-guests" class="carousel slide" data-bs-theme="dark">
                   <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carousel-table-1-guests" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carousel-lecture-guests" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   </div>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -522,11 +522,11 @@
                       </div>
                     </div>
                   </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carousel-table-1-guests" data-bs-slide="prev">
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carousel-lecture-guests" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                   </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carousel-table-1-guests" data-bs-slide="next">
+                  <button class="carousel-control-next" type="button" data-bs-target="#carousel-lecture-guests" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                   </button>
