adicionado links das transmissões

--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -197,11 +197,15 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0 bg-encup-secondary py-2 my-2">
-                  <div class="col-auto fw-bold">
-                    10h00 às 10h30
+                  <div class="col-auto fw-bold text-center">
+                    10h00 às 10h30<br>
+                    <a href="https://youtube.com/live/8R2waQiexpU?feature=share" target="_blank" class="text-decoration-none text-body"><span class="fw-medium">ao vivo</span> <i class="bi fs-5 bi-youtube"></i></a>
                   </div>
                   <div class="col">
                     Abertura
+                  </div>
+                  <div class="col-auto ps-0">
+                    <a href="https://youtube.com/live/8R2waQiexpU?feature=share" target="_blank" class="btn btn-tertiary-bc py-1"><i class="bi fs-4 bi-youtube"></i></a>
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0">
@@ -249,7 +253,7 @@
                     15h00 às 16h25
                   </div>
                   <div class="col">
-                    Oficinas temáticas: gestão e sala de aula
+                    Oficinas temáticas sobre gestão e sala de aula
                   </div>
                   <div class="col-auto ps-0">
                     <button class="btn btn-tertiary-bc" id="btn-workshop-info"><span class="material-symbols-outlined">info</span></button>
@@ -276,11 +280,15 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0 bg-encup-secondary py-2 mt-2">
-                  <div class="col-auto fw-bold">
-                    18h35 às 18h45
+                  <div class="col-auto fw-bold text-center">
+                    18h35 às 18h45<br>
+                    <a href="https://youtube.com/live/SvR3X4_AN2o?feature=share" target="_blank" class="text-decoration-none text-body"><span class="fw-medium">ao vivo</span> <i class="bi fs-5 bi-youtube"></i></a>
                   </div>
                   <div class="col">
                     Encerramento 1º dia
+                  </div>
+                  <div class="col-auto ps-0">
+                    <a href="https://youtube.com/live/SvR3X4_AN2o?feature=share" target="_blank" class="btn btn-tertiary-bc py-1"><i class="bi fs-4 bi-youtube"></i></a>
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0 py-2 mt-2">
@@ -317,11 +325,15 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0 bg-encup-secondary py-2 my-2">
-                  <div class="col-auto fw-bold">
-                    10h00 às 10h15
+                  <div class="col-auto fw-bold text-center">
+                    10h00 às 10h15<br>
+                    <a href="https://youtube.com/live/1P1WM93Paxc?feature=share" target="_blank" class="text-decoration-none text-body"><span class="fw-medium">ao vivo</span> <i class="bi fs-5 bi-youtube"></i></a>
                   </div>
                   <div class="col">
                     Abertura do segundo dia
+                  </div>
+                  <div class="col-auto ps-0">
+                    <a href="https://youtube.com/live/1P1WM93Paxc?feature=share" target="_blank" class="btn btn-tertiary-bc py-1"><i class="bi fs-4 bi-youtube"></i></a>
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0">
@@ -366,11 +378,15 @@
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0 bg-encup-secondary py-2 mt-2">
-                  <div class="col-auto fw-bold">
-                    16h40 às 16h50
+                  <div class="col-auto fw-bold text-center">
+                    16h40 às 16h50<br>
+                    <a href="https://youtube.com/live/U9sLPVRchOI?feature=share" target="_blank" class="text-decoration-none text-body"><span class="fw-medium">ao vivo</span> <i class="bi fs-5 bi-youtube"></i></a>
                   </div>
                   <div class="col">
                     Encerramento do evento
+                  </div>
+                  <div class="col-auto ps-0">
+                    <a href="https://youtube.com/live/U9sLPVRchOI?feature=share" target="_blank" class="btn btn-tertiary-bc py-1"><i class="bi fs-4 bi-youtube"></i></a>
                   </div>
                 </div>
                 <hr class="my-0 border-2 opacity-100">
