--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="w-100 text-center mb-2">
-        <a href="https://www.instagram.com/brasil.cursinhos/" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">info</span> Mais Informações</b></a>
+        <a href="/manual-do-participante.pdf" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">info</span> Manual do Participante</b></a>
         <button type="button" class="btn btn-tertiary-bc m-1 minw-240 w-auto" data-bs-toggle="modal" data-bs-target="#modal-subscription">
           <b><span class="material-symbols-outlined">priority</span> Inscreva-se</b>
         </button>
